# G2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  compile_commands.json
Engine/: CMakeLists.txt
Engine/src/: Action.hpp  Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  Buttons.hpp  Components.hpp  DebugUI.cpp  DebugUI.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  Grid.cpp  Grid.hpp  Gui.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Serialisation.cpp  Serialisation.hpp  Vec2.hpp  Window.cpp  Window.hpp
Engine/src/sff/: sffFileManipulator.cpp  sffFileManipulator.hpp  sffNode.hpp  sffNodeData.hpp  sffParser.cpp  sffParser.hpp  sffSerialiser.cpp  sffSerialiser.hpp
Engine/test/: vec2.cpp
Game/: CMakeLists.txt
Game/res/saves/: Unnamed Level  test.sff  testWrite.sff
Game/src/: main.cpp
Game/src/scene base/: Components.hpp  EditorState.hpp  EditorUI.cpp  EditorUI.hpp  GameMap.cpp  GameMap.hpp  Pathfinding.cpp  Pathfinding.hpp  TileEffect.hpp
Game/src/scenes/: Scene_Editor.cpp  Scene_Editor.hpp  Scene_Game.cpp  Scene_Game.hpp  Scene_MainMenu.cpp  Scene_MainMenu.hpp
src/: Action.hpp  Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Components.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  GameMap.cpp  GameMap.hpp  Grid.cpp  Grid.hpp  Scene.cpp  Scene.hpp  Scene_Editor.cpp  Scene_Editor.hpp  Scene_MainMenu.cpp  Scene_MainMenu.hpp  Window.cpp  Window.hpp  main.cpp
src/engine/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  Gui.hpp  Parser.hpp  Serialisation.cpp  Serialisation.hpp  Window.cpp  Window.hpp
src/scene base/: Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  Components.hpp  EditorState.hpp  EditorUI.cpp  EditorUI.hpp  Effect.hpp  GameEnums.hpp  GameMap.cpp  GameMap.hpp  Grid.cpp  Scene.cpp  Scene.hpp  TileEffect.hpp
src/scenes/: Scene_Editor.cpp  Scene_Editor.hpp  Scene_MainMenu.cpp  Scene_MainMenu.hpp
src/sff/: sffFileManipulator.cpp  sffFileManipulator.hpp  sffNode.hpp  sffNodeData.hpp  sffParser.cpp  sffParser.hpp  sffSerialiser.cpp  sffSerialiser.hpp
